# buch

./: .dockerignore  .editorconfig  .env.STUDENT  .eslintrc.cjs  .gitignore  .markdownlint.yml  .npmrc  .prettierignore  .prettierrc.yml  Dockerfile  Dockerfile.alpine  Dockerfile.distroless  Dockerfile.trixie  Dockerfile.wolfi  Jenkinsfile  ReadMe.keycloak.md  ReadMe.md  ReadMe.nest.md  ReadMe.prisma.md  ReadMe.vscode.md  VORGEHENSWEISE.md  Zusammenfassung.md  docker-bake.hcl  eslint.config.js  eslint.config.mjs  eslint.config.mts  oxfmt.config.mts  oxfmt.config.ts  oxlint.config.mts  oxlint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  sonar-project.properties  tsconfig.json  typedoc.mjs  vitest.config.mts  vitest.config.ts
.extras/: dive.ps1  dive.sh  generate-load.js  generate-load.ps1  generate-load.sh
.extras/bruno/: ReadMe.md
.extras/bruno/nest/: collection.bru
.extras/compose/: compose.yml
.extras/compose/backend/: compose.yml
.extras/compose/buch/: .env  .env.STUDENT  app.toml  app.yml  compose.busybox.yml  compose.yml
.extras/compose/debug/: compose.busybox.yml  compose.yml
.extras/compose/fakesmtp/: compose.yml
.extras/compose/jenkins/: Dockerfile  ReadMe.md  compose.yml
.extras/compose/keycloak/: .env  ReadMe.md  compose.yml
.extras/compose/mysql/: ReadMe.md  compose.yml
.extras/compose/oracle/: compose.yml
.extras/compose/pgadmin/: compose.yml
.extras/compose/postgres/: ReadMe.md  compose.yml
.extras/compose/prometheus-grafana/: compose.yml  prometheus.yml
.extras/compose/sonarqube/: .env  ReadMe.md  compose.yml
.extras/compose/trivy/: compose.yml
.extras/db/postgres/: ReadMe.md
.extras/dependency-check/: dependency-check.js  dependency-check.ps1  suppression.xml
.extras/doc/projekthandbuch/: BuchController.plantuml  BuchMutationResolver.plantuml  BuchQueryResolver.plantuml  BuchReadService.plantuml  BuchService.plantuml  BuchWriteController.plantuml  BuchWriteService.plantuml  ReadMe.md  projekthandbuch.adoc
.extras/jenkins/: Dockerfile  docker-bake.hcl
.extras/lasttest/: README.md  locustfile.py  pyproject.toml
.extras/lasttest-k6/: isbn_generate.ts  script.ts  test.ts
.extras/lasttest-locust/: pyproject.toml
.extras/locust/: ReadMe.txt  locustfile.py  pyproject.toml
__tests__/: login.ts  testserver.ts  token.ts
__tests__/buch/: buch-DELETE.controller.test.ts  buch-GET-id.controller.snapshot.test.ts  buch-GET-id.controller.test.ts  buch-GET.controller.test.ts  buch-POST.controller.test.ts  buch-PUT.controller.test.ts  buch-mutation.resolver.test.ts  buch-query.resolver.test.ts  error-response.ts
__tests__/keycloak/: login.controller.test.ts  login.resolver.test.ts  token.controller.test.ts  token.resolver.test.ts
extras/bruno/: ReadMe.md
extras/bruno/buch/: opencollection.yml
extras/bruno/javascript/: opencollection.yml
extras/bruno/nest/: collection.bru  opencollection.yml  workspace.yml
extras/compose/buch/: app.toml  compose.yml
extras/compose/debug/: compose.busybox.yml  compose.yml
extras/compose/jenkins/: ReadMe.md  compose.yml
extras/compose/keycloak/: ReadMe.md  compose.bash.yml  compose.init.yml  compose.yml
extras/compose/mailpit/: ReadMe.md  compose.yml
extras/compose/postgres/: ReadMe.md  compose.bash.yml  compose.init.yml  compose.yml
extras/compose/prometheus-grafana/: ReadMe.md  compose.yml
extras/compose/sonarqube/: ReadMe.md  compose.yml
extras/doc/folien/: folien.adoc
extras/doc/projekthandbuch/: ReadMe.md
extras/jenkins/: Dockerfile  docker-bake.hcl
prettier/: schema.prisma
prisma/: schema.prisma
scripts/: asciidoctor.mts  clean.mts  copy-resources.mts  dependency-check.js  dependency-check.mts  generate-load.js  generate-load.mts  sonar-scanner.js  sonar-scanner.mts  suppression.xml
src/: app.module.ts  app.mts  container.mts  index-hello.mts  index.mts  main.ts  module.ts  problem-details.mts
src/admin/: admin.module.ts  health-router.mts  health.controller.ts  module.ts  prometheus.controller.ts  prometheus.ts
src/buch/: buch.module.ts  module.ts
src/buch/controller/: buch-controller.ts  buch-dto.ts  buch-get.controller.ts  buch-write-controller.ts  buch-write.controller.ts  buchDTO.entity.ts  buchDTO.ts  controller.ts  create-base-uri.ts  createBaseUri.ts  exceptions.ts  get.ts  page.ts  write-controller.ts  write.ts
src/buch/entity/: abbildung.entity.ts  abbildung.ts  bignumber-transformer.ts  buch.entity.ts  buch.ts  buchFile.entity.ts  decimal-transformer.ts  entities.ts  file.ts  titel.entity.ts  titel.ts
src/buch/graphql/: buch-mutation.resolver.ts  buch-query.resolver.ts  graphql-app.mts  mutation-handler.mts  query-handler.mts  role-required.mts  roles-required.mts  schema.mts  types.mts
src/buch/resolver/: buch-mutation.resolver.ts  buch-query.resolver.ts  http-exception.filter.ts  mutation.ts  query.ts
src/buch/rest/: buch-get.controller.ts  buch-write.controller.ts  buchDTO.entity.ts  (+2 more)
src/config/: app.mts  app.ts  cors.ts  db.mts  db.ts  env.mts  env.ts  graphql.ts  health.ts  https.ts  keycloak.mts  keycloak.ts  logger.mts  logger.ts  mail.mts  mail.ts  module.ts  node.ts  paths.ts  prisma-client.mts  prisma-service.ts  resources.ts  server.mts  typeorm.ts  typeormNamingStrategy.ts  typeormOptions.ts
src/logger/: banner.mts  banner.service.ts  banner.ts  logger.mts  logger.ts  request-logger.mts  response-time.interceptor.ts  response-time.mts
src/mail/: mail.module.ts  mail.service.ts  module.ts  sendmail.mts
src/monitoring/: prometheus-metrics.mts
src/security/: auth-router.mts  errors.mts  keycloak-service.mts  role-required.mts  roles-required.mts
test/: setup.global.mts
test/integration/: constants.mts  setup.global.mts  simple.test.mts  token.mts
test/lasttest/: ReadMe.md  isbn_generate.ts  script.ts  tsconfig.json
test/lasttest-locust/: README.md  locustfile.py  pyproject.toml
test/rest/: buch-POST.controller.test.mts
test/unit/: buch-service.find-by-id.test.mts  buch-service.find.test.mts  buch-service.test.mts  buch-write-service.test.mts
(+377 files in other folders)
